changed submit button to be in middle, fixed navbar so it fits on mobile page

--- a/resources/css/Navbar.css
+++ b/resources/css/Navbar.css
@@ -26,7 +26,7 @@
     text-decoration: none;
     font-size: 2rem;
     display: flex;
-    align-items: center;
+    align-items: start;
 }
 
 .fa-typo3 {
@@ -84,7 +84,6 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 90vh;
         position: absolute;
         top: 80px;
         left: -100%;
@@ -117,8 +116,6 @@
         position: absolute;
         top: 0;
         left: 0;
-        transform: translate(25%, 50%);
-        margin-left: -80px;
     }
 
     .menu-icon {
